<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Смены Полимира</string>
    <string name="action_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="title_activity_about">Справка</string>
    <string name="about_app">Приложение для просмотра\n
        					графика работы смен\n
        					завода "Полимир"\n</string>
    <string name="author_app">\n\nРазработчик\n
        					Андрей Мацкевич</string>
    <string name="email_author">matskevichandrei@gmail.com</string>
    <string name="radio_12">12ч смена</string>
    <string name="radio_8">8ч смена</string>
    <string name="radio_day">2 через 2</string>
    <string name="title_activity_calendar">Календарь</string>
    <string name="fullHours_text">Фактические часы</string>
    <string name="normalHours_text">Норма рабочего времени</string>
    <string name="overHours_text">Переработанные часы</string>
    <string name="holidayHours_text">Праздничные часы</string>
    <string name="exception_try_again">Произошла ошибка.\nПопробуйте ещё раз или перезапустите приложение.</string>
    <string name="common_holiday">Совместные выходные</string>
    <string name="processed_holiday">рассчитать</string>
    <string name="choose_shift">Выберете смену</string>

</resources>