<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="by.matskevich.calendaroffactory.MainActivity" >

    <item
        android:id="@+id/empty_item"
        android:orderInCategory="10"
        android:title="@string/settings_title"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_overflow">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="10"
                android:showAsAction="never"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_about"
                android:orderInCategory="20"
                android:showAsAction="never"
                android:title="@string/title_activity_about"/>
        </menu>
    </item>

</menu>