<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroup1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/radioButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/radiobuttonbackground"
        android:button="@android:color/transparent"
        android:checked="true"
        android:onClick="onClickRadioSelect"
        android:padding="5dp"
        android:text="@string/radio_12"
        android:textColor="@color/radioButtonText" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/radiobuttonbackground"
        android:button="@android:color/transparent"
        android:onClick="onClickRadioSelect"
        android:padding="5dp"
        android:text="@string/radio_8"
        android:textColor="@color/radioButtonText" />

    <RadioButton
        android:id="@+id/radioButtonDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/radiobuttonbackground"
        android:button="@android:color/transparent"
        android:onClick="onClickRadioSelect"
        android:padding="5dp"
        android:text="@string/radio_day"
        android:textColor="@color/radioButtonText" />

</RadioGroup>