<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/backgroundApp"
              android:orientation="vertical">


    <RadioGroup
            android:id="@+id/radioGroupStaffFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundApp"
            android:orientation="vertical">

        <RadioButton
                android:id="@+id/radio_1_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_12"
                android:layout_weight="1"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/radio_1_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_8"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/radio_1_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_day"
                android:layout_weight="1"/>
    </RadioGroup>

    <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <RadioGroup
            android:id="@+id/radioGroupStaffSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundApp"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/radio_2_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_12"
                android:layout_weight="1"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/radio_2_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_8"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/radio_2_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_day"
                android:layout_weight="1"/>
    </RadioGroup>


    <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/show_common_holiday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processed_holiday"
            android:padding="5dp"/>

</LinearLayout>