<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:checked="true"
            android:onClick="onClickRadioSelect"
            android:text="@string/radio_12"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:checked="false"
            android:onClick="onClickRadioSelect"
            android:text="@string/radio_8"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:checked="false"
            android:onClick="onClickRadioSelect"
            android:text="@string/radio_day"
            android:textSize="15sp" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/table_shift12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tableSetting_12"
        android:stretchColumns="*"
        android:visibility="visible" >
    </TableLayout>

    <TableLayout
        android:id="@+id/table_shift8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tableSetting_8"
        android:stretchColumns="*"
        android:visibility="gone" >
    </TableLayout>

    <TableLayout
        android:id="@+id/table_shift_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tableSetting_day"
        android:stretchColumns="*"
        android:visibility="gone" >
    </TableLayout>

</TableLayout>